# wx

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/skills/release-wx/: SKILL.md
.github/workflows/: ci.yml  publish-cli.yml  publish-vscode-extension.yml
cli/: package.json
cli/npm/darwin-arm64/: package.json
cli/npm/darwin-x64/: package.json
cli/npm/linux-x64/: package.json
cli/npm/win32-x64/: package.json
crates/wx-cli/: Cargo.toml
crates/wx-cli/src/: main.rs
crates/wx-compiler/: Cargo.toml
crates/wx-compiler-wasm/: Cargo.toml
crates/wx-compiler/src/ast/: mod.rs  tests.rs
crates/wx-compiler/src/ast/snapshots/: wx_compiler__ast__tests__impl.snap  wx_compiler__ast__tests__impl_trait_for_type.snap  wx_compiler__ast__tests__match_enum_variant_patterns.snap  wx_compiler__ast__tests__match_int_literal_patterns.snap  wx_compiler__ast__tests__top_level_items.snap
crates/wx-compiler/src/codegen/: mod.rs  tests.rs
crates/wx-compiler/src/codegen/snapshots/: wx_compiler__codegen__tests__slice_range_array_wat.snap  wx_compiler__codegen__tests__slice_range_wat.snap
crates/wx-compiler/src/mir/: mod.rs  tests.rs
crates/wx-compiler/src/mir/snapshots/: wx_compiler__mir__tests__align_of_lowers_to_const_int.snap  wx_compiler__mir__tests__char_lowered_to_u32.snap  wx_compiler__mir__tests__compound_assign_through_ptr_deref_on_struct_field.snap  wx_compiler__mir__tests__enum_folded_arithmetic_variant_lowered.snap  wx_compiler__mir__tests__enum_variant_lowered_to_repr_scalar.snap  wx_compiler__mir__tests__generic_impl_slice_count_method_lowers_correctly.snap  wx_compiler__mir__tests__generic_over_memory_monomorphizes_size_type.snap  wx_compiler__mir__tests__generic_type_alias_transparent_in_mir.snap  wx_compiler__mir__tests__global_struct_type.snap  wx_compiler__mir__tests__inline_method_is_substituted.snap  wx_compiler__mir__tests__match_enum_lowers_discriminants_to_repr_values.snap  wx_compiler__mir__tests__match_int_lowers_to_switch.snap  wx_compiler__mir__tests__memory_data_end_lowers_to_memory_offset.snap  wx_compiler__mir__tests__memory_grow_lowers_to_memory_grow.snap  wx_compiler__mir__tests__memory_index_lowers_to_int.snap  wx_compiler__mir__tests__memory_size_lowers_to_memory_size.snap  wx_compiler__mir__tests__non_inline_callee_survives_dce.snap  wx_compiler__mir__tests__size_of_generic_monomorphizes.snap  wx_compiler__mir__tests__size_of_lowers_to_const_int.snap  wx_compiler__mir__tests__slice_from_parts_lowers_to_aggregate.snap  wx_compiler__mir__tests__slice_len_lowers_to_aggregate_get.snap  wx_compiler__mir__tests__struct_field_access_lowered_to_local_tuple_get.snap  wx_compiler__mir__tests__struct_init_lowered_to_struct_create.snap  wx_compiler__mir__tests__tuple_type_alias_transparent_in_mir.snap  wx_compiler__mir__tests__type_alias_to_struct_transparent_in_mir.snap
crates/wx-compiler/src/opt/: builder.rs  liveness.rs  mod.rs  scheduler.rs  tests.rs
crates/wx-compiler/src/opt/snapshots/: wx_compiler__opt__tests__snapshot_sched_call_two_args.snap
crates/wx-compiler/src/tir/: builder.rs  mod.rs  tests.rs
crates/wx-compiler/src/tir/snapshots/: wx_compiler__tir__tests__generic_identity_resolves.snap  wx_compiler__tir__tests__generic_struct_in_type_position_resolves.snap  wx_compiler__tir__tests__generic_struct_init_with_type_args.snap  wx_compiler__tir__tests__local_variable_used_in_import_call.snap  wx_compiler__tir__tests__match_int_exhaustive_with_wildcard.snap  wx_compiler__tir__tests__parse_import_with_alias.snap  wx_compiler__tir__tests__parse_simple_addition.snap  wx_compiler__tir__tests__struct_valid_init.snap  wx_compiler__tir__tests__structs.snap
crates/wx-compiler/std/: lib.wx
crates/wx-fmt/: Cargo.toml
crates/wx-fmt/src/: lib.rs  tests.rs
crates/wx-lsp/: Cargo.toml
crates/wx-lsp-wasm/: Cargo.toml
crates/wx-lsp/src/: completion.rs  lib.rs  symbol_index.rs  tests.rs
devlog/: 2026-07-21-match-expression-and-br-table.md  index.md
examples/: main.txt
examples/arena/: main.wx
examples/wasi_hello_world/: main.wx
notes/: chatgpt-multiple-trait-implementations-per-target.md  generic-trait-impls-plan.md  single-trait-impl-per-constructor-plan.md
vscode/: CHANGELOG.md  README.md  package.json
vscode/src/: extension.ts
