[workspace]
resolver = "3"
members = ["crates/*"]
# `wx-lsp-wasm` holds `js_sys`/wasm-bindgen values (e.g. `js_sys::Function`),
# which are deliberately `!Send` — so it can only build for a single-threaded
# target. A plain `cargo check`/`build --workspace` (no `--target`) builds
# every member for the host triple, which this crate can't satisfy; excluded
# here, build/check it explicitly with `--target wasm32-unknown-unknown`
# (what `wasm-pack` does) instead.
exclude = ["crates/wx-lsp-wasm"]
package.license = "MIT"
package.edition = "2024"
# Found the minimum version with https://github.com/foresterre/cargo-msrv
package.rust-version = "1.85.1"
package.authors = ["Artem Melnyk <melkam464@gmail.com>"]

# Insta benefits from being compiled in release mode
# https://insta.rs/docs/quickstart/#optional-faster-runs
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

# Debug symbols are dead weight in a shipped `wx` binary (npm/GitHub release
# artifacts, the VS Code extension's PATH lookup) — this alone drops it from
# ~7.4MB to ~5.0MB, no runtime or compile-time cost.
[profile.release]
strip = true

[workspace.dependencies]
codespan-reporting = "0.13.1"
string-interner = "0.20.0"
serde = "1.0"
serde_json = "1.0"

# Reviewed and left as deliberate judgement calls rather than mechanical
# fixes (see the commit that introduced this table): each would require a
# real API or type-design change, not just a local rewrite. Worth
# revisiting and possibly fixing later — not permanent exemptions. CI
# denies every other warning (`cargo clippy -- -D warnings`), so this list
# is the only thing keeping that gate green — member crates opt in with
# `[lints] workspace = true`.
[workspace.lints.clippy]
type_complexity = "allow"
result_unit_err = "allow"
ptr_arg = "allow"
match_like_matches_macro = "allow"
needless_range_loop = "allow"
new_without_default = "allow"
