[package]
name = "wx-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/wxlanguage/wx/tree/main/crates/wx-cli"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.40", features = ["cargo"] }
codespan-reporting = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
string-interner = { workspace = true }
wx-compiler = { path = "../wx-compiler" }
wx-fmt = { path = "../wx-fmt" }


[[bin]]
name = "wx"
path = "src/main.rs"
