[package]
name = "wx-compiler-wasm"
description = "Wasm bindings for wx-compiler"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/wxlanguage/wx/tree/main/crates/wx-compiler-wasm"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
string-interner = { workspace = true }
serde = { workspace = true }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.6"
codespan-reporting = { workspace = true, features = ["serialization"] }
wx-compiler = { path = "../wx-compiler" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
