[package]
name = "wx-compiler"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/wxlanguage/wx/tree/main/crates/wx-compiler"

[lints]
workspace = true

[lib]

[dependencies]
codespan-reporting = { workspace = true, features = ["serialization"] }
leb128fmt = "0.1.0"
string-interner = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
indoc = "2"
serde_json = { workspace = true }
insta = { version = "1.43", features = ["yaml"] }
wasmtime = "46.0.1"
wasmprinter = "0.252.0"
