[package]
name = "wx-lsp-wasm"
description = "Wasm bindings for wx-lsp"
version = "0.1.1"
# Not `.workspace = true`: this crate is deliberately excluded from the root
# workspace's `members` (see the comment on `exclude` in the root
# `Cargo.toml`) since it's genuinely wasm32-only and can't be type-checked
# for the host target. That means there's no workspace root to inherit
# these from — keep them in sync with the root `Cargo.toml`'s
# `[workspace.package]`/`[workspace.dependencies]` by hand.
edition = "2024"
rust-version = "1.85.1"
authors = ["Artem Melnyk <melkam464@gmail.com>"]
license = "MIT"
repository = "https://github.com/wxlanguage/wx/tree/main/crates/wx-lsp-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wx-lsp = { path = "../wx-lsp" }
tower-lsp-server = { version = "0.23.0", default-features = false, features = [
    "runtime-agnostic",
] }
tower = { version = "0.5", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std"] }
serde = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
