[package]
name = "wx-lsp"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/wxlanguage/wx/tree/main/crates/wx-lsp"

[lints]
workspace = true

[dependencies]
# Runtime feature (`runtime-tokio` vs `runtime-agnostic`) selected per-target
# below, not here — see the target tables.
tower-lsp-server = { version = "0.23.0", default-features = false }
tokio = { version = "1", default-features = false, features = ["sync"] }
wx-compiler = { path = "../wx-compiler" }
wx-fmt = { path = "../wx-fmt" }
string-interner = { workspace = true }
codespan-reporting = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# `std::time::Instant::now()` panics on `wasm32-unknown-unknown`; this is a
# drop-in replacement backed by `Performance.now()` there.
web-time = "1.1.0"

# Platform-specific deps are gated on `target_arch` here rather than via
# Cargo `[features]`: this crate is reached both as a native workspace
# member and as `wx-lsp-wasm`'s dependency, and Cargo unifies a package's
# requested features across every consumer regardless of its actual compile
# target — so a `native`/`wasm` feature switch (what this used to be) had
# both active at once on a plain `cargo check --workspace`. Target tables
# don't have that problem: only the table matching the real compile target
# applies.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# `runtime-agnostic` also builds here, but its `Server::serve` only flushes
# writes as a side effect of the next stdin read, so notifications sit
# unflushed until the client happens to send something else. `runtime-tokio`
# flushes inline with each write.
tower-lsp-server = { version = "0.23.0", default-features = false, features = [
    "runtime-tokio",
] }
# `rt`, not `rt-multi-thread`: this crate no longer builds its own runtime
# (that moved to whichever binary embeds it, e.g. `wx-cli`'s `lsp`
# subcommand), so the only runtime-shaped feature it needs for itself is
# `macros` for `#[tokio::test]` in `tests.rs`. No `io-std` either — that's
# only needed to construct concrete `tokio::io::Stdin`/`Stdout` handles,
# which `run_stdio` now takes as generic parameters instead of constructing
# itself (see its doc comment).
tokio = { version = "1", features = ["rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# `wx-lsp-wasm` never calls `Server::serve`, but `tower-lsp-server` still
# needs *some* runtime feature enabled to compile at all. `runtime-tokio`
# needs tokio's multi-thread runtime, which wasm32 doesn't support, so this
# is the only option here.
tower-lsp-server = { version = "0.23.0", default-features = false, features = [
    "runtime-agnostic",
] }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
indoc = "2"
futures = "0.3"
